# gemina-sdk

./: .gitignore  README.md
.github/workflows/: ci.yml  release.yml
config/: README.md  csharp.json  java.json  languages.json  php.json  python.json  smoke.json  typescript.json
docs/: HELPER_CONTRACT.md  PUBLISHING-SETUP.md  README_TEMPLATE.md
sdks/csharp/: Gemina.Sdk.sln  README.md
sdks/csharp/smoke/: Program.cs  Smoke.csproj
sdks/csharp/src/Gemina.Sdk/: Gemina.Sdk.csproj
sdks/csharp/src/Gemina.Sdk/Helpers/: DocumentTransport.cs  Errors.cs  GeminaClient.cs  GeminaDocumentSource.cs  ProcessDocumentOptions.cs  SdkVersion.cs
sdks/csharp/tests/Gemina.Sdk.Tests/: DocumentTransportTests.cs  Gemina.Sdk.Tests.csproj  GeminaChatConversationTests.cs  GeminaClientTests.cs
sdks/java/: README.md  pom.xml
sdks/java/src/main/java/co/gemina/sdk/: GeminaApiClient.java  GeminaClient.java  GeminaDocumentSource.java  GeminaException.java  GeminaProcessingException.java  GeminaTimeoutException.java  ProcessDocumentOptions.java  SdkVersion.java  (+1 more)
sdks/php/lib/Model/: ChatQueryInDTO.php  ChatQueryOutDTO.php
sdks/python/: README.md  pyproject.toml
sdks/python/smoke/: smoke.py
sdks/python/src/gemina/: __init__.py  _version.py  errors.py  helpers.py
sdks/python/tests/: test_conversation.py  test_helpers.py
sdks/typescript/: README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts
sdks/typescript/smoke/: smoke.mjs
sdks/typescript/src/: errors.ts  helpers.ts  index.ts  version.ts
sdks/typescript/test/: conversation.test.ts  helpers.test.ts
specs/: CURRENT  gemina-1.0.0.json
tools/: fetch_spec.py  generate.py  smoke.py  sync_console_docs.sh
(+3 files in other folders)
