[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "gemina"
version = "0.1.2"
description = "Official Python SDK for the Gemina API - invoice OCR and document intelligence: upload documents, get typed structured data back, then search, aggregate, and chat over everything you've processed."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Gemina", email = "support@gemina.co" }]
keywords = ["gemina", "invoice", "ocr", "document-intelligence", "api", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.28.1,<1.0",
    "pydantic>=2.11,<3.0",
    "python-dateutil>=2.8.2,<3.0",
    "typing-extensions>=4.7.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.urls]
Homepage = "https://gemina.co"
Repository = "https://github.com/tommyil/gemina-sdk"
Documentation = "https://console.gemina.co/docs"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
gemina = ["py.typed"]
"gemina.generated" = ["py.typed"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
